Bug 282641 - Konqueror crashed after clicking on twitter button
Summary: Konqueror crashed after clicking on twitter button
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.7.1
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 279121 282691 286999 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-09-23 18:46 UTC by Gatoso
Modified: 2012-01-09 06:33 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gatoso 2011-09-23 18:46:45 UTC
Application: konqueror (4.7.1 (4.7.1))
KDE Platform Version: 4.7.1 (4.7.1) (Compiled from sources)
Qt Version: 4.7.4
Operating System: Linux 3.0-pae i686
Distribution (Platform): Archlinux Packages

-- Information about the crash:
- What I was doing when the application crashed:

I clicked on the button twitter in this webpage:

http://www.elciudadano.cl/2011/09/23/codelco-sigue-a-la-deriva/

(blue button below the main title of the article)

and konqueror crashed

I can reproduce the error, at least now.

Thanks a lot

- Unusual behavior I noticed:

-- Backtrace:
Application: Konqueror (kdeinit4), signal: Aborted
[Current thread is 1 (Thread 0xb54e9710 (LWP 1656))]

Thread 11 (Thread 0xaf196b70 (LWP 1657)):
#0  0xb6ba6cb6 in pthread_mutex_lock () from /lib/libpthread.so.0
#1  0xb59067c7 in g_main_context_release () from /usr/lib/libglib-2.0.so.0
#2  0xb5908106 in g_main_context_iterate.isra.19 () from /usr/lib/libglib-2.0.so.0
#3  0xb59084da in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#4  0xb6d5f75f in QEventDispatcherGlib::processEvents (this=0x994dae8, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#5  0xb6d2af7d in QEventLoop::processEvents (this=0xaf196220, flags=...) at kernel/qeventloop.cpp:149
#6  0xb6d2b1c9 in QEventLoop::exec (this=0xaf196220, flags=...) at kernel/qeventloop.cpp:201
#7  0xb6c1ca35 in QThread::exec (this=0x9969d80) at thread/qthread.cpp:498
#8  0xb501c6a8 in KIO::NameLookUpThread::run (this=0x9969d80) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/kio/kio/hostinfo.cpp:226
#9  0xb6c1ff0b in QThreadPrivate::start (arg=0x9969d80) at thread/qthread_unix.cpp:331
#10 0xb22ad9cd in ?? () from /usr/lib/libGL.so.1
#11 0xb5ead8ce in clone () from /lib/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 10 (Thread 0xa7f5eb70 (LWP 1678)):
#0  0xb7781424 in __kernel_vsyscall ()
#1  0xb6ba8d03 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xac76f4b5 in metronom_sync_loop () from /usr/lib/libxine.so.1
#3  0xb22ad9cd in ?? () from /usr/lib/libGL.so.1
#4  0xb5ead8ce in clone () from /lib/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 9 (Thread 0xa875fb70 (LWP 1685)):
#0  0xb7781424 in __kernel_vsyscall ()
#1  0xb6ba895b in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb3fb1ce1 in WTF::TCMalloc_PageHeap::scavengerThread() () from /usr/lib/libQtWebKit.so.4
#3  0xb3fb1d1f in WTF::TCMalloc_PageHeap::runScavengerThread(void*) () from /usr/lib/libQtWebKit.so.4
#4  0xb22ad9cd in ?? () from /usr/lib/libGL.so.1
#5  0xb5ead8ce in clone () from /lib/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 8 (Thread 0xab08eb70 (LWP 1686)):
#0  0xb59b9d80 in clock_gettime () from /lib/librt.so.1
#1  0xb6c7dee5 in do_gettime (frac=0xab08dff0, sec=0xab08dfe8) at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0xb6d60376 in QTimerInfoList::updateCurrentTime (this=0xc13fb6c) at kernel/qeventdispatcher_unix.cpp:339
#4  0xb6d5ff46 in timerSourceCheckHelper (src=0xc13fb38) at kernel/qeventdispatcher_glib.cpp:150
#5  timerSourceCheckHelper (src=0xc13fb38) at kernel/qeventdispatcher_glib.cpp:144
#6  0xb590769c in g_main_context_check () from /usr/lib/libglib-2.0.so.0
#7  0xb59080f0 in g_main_context_iterate.isra.19 () from /usr/lib/libglib-2.0.so.0
#8  0xb59084da in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#9  0xb6d5f75f in QEventDispatcherGlib::processEvents (this=0xbb70c00, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#10 0xb6d2af7d in QEventLoop::processEvents (this=0xab08e230, flags=...) at kernel/qeventloop.cpp:149
#11 0xb6d2b1c9 in QEventLoop::exec (this=0xab08e230, flags=...) at kernel/qeventloop.cpp:201
#12 0xb6c1ca35 in QThread::exec (this=0xbb70cc0) at thread/qthread.cpp:498
#13 0xb6c1cb5b in QThread::run (this=0xbb70cc0) at thread/qthread.cpp:565
#14 0xb6c1ff0b in QThreadPrivate::start (arg=0xbb70cc0) at thread/qthread_unix.cpp:331
#15 0xb22ad9cd in ?? () from /usr/lib/libGL.so.1
#16 0xb5ead8ce in clone () from /lib/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 7 (Thread 0xa5b73b70 (LWP 1716)):
#0  0xb7781424 in __kernel_vsyscall ()
#1  0xb6ba895b in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xa8f37087 in ?? () from /usr/lib/mozilla/plugins/libflashplayer.so
#3  0xa904acf5 in ?? () from /usr/lib/mozilla/plugins/libflashplayer.so
#4  0xa8f3718d in ?? () from /usr/lib/mozilla/plugins/libflashplayer.so
#5  0xa8f37816 in ?? () from /usr/lib/mozilla/plugins/libflashplayer.so
#6  0xb6ba4ce7 in start_thread () from /lib/libpthread.so.0
#7  0xb5ead8ce in clone () from /lib/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 6 (Thread 0xa6374b70 (LWP 1717)):
#0  0xb7781424 in __kernel_vsyscall ()
#1  0xb6ba895b in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xa8f37087 in ?? () from /usr/lib/mozilla/plugins/libflashplayer.so
#3  0xa904acf5 in ?? () from /usr/lib/mozilla/plugins/libflashplayer.so
#4  0xa8f3718d in ?? () from /usr/lib/mozilla/plugins/libflashplayer.so
#5  0xa8f37816 in ?? () from /usr/lib/mozilla/plugins/libflashplayer.so
#6  0xb6ba4ce7 in start_thread () from /lib/libpthread.so.0
#7  0xb5ead8ce in clone () from /lib/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 5 (Thread 0xa6b75b70 (LWP 1718)):
#0  0xb7781424 in __kernel_vsyscall ()
#1  0xb6ba895b in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xa8f37087 in ?? () from /usr/lib/mozilla/plugins/libflashplayer.so
#3  0xa904acf5 in ?? () from /usr/lib/mozilla/plugins/libflashplayer.so
#4  0xa8f3718d in ?? () from /usr/lib/mozilla/plugins/libflashplayer.so
#5  0xa8f37816 in ?? () from /usr/lib/mozilla/plugins/libflashplayer.so
#6  0xb6ba4ce7 in start_thread () from /lib/libpthread.so.0
#7  0xb5ead8ce in clone () from /lib/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 4 (Thread 0xae995b70 (LWP 1719)):
#0  0xb7781424 in __kernel_vsyscall ()
#1  0xb6ba895b in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xa8f37087 in ?? () from /usr/lib/mozilla/plugins/libflashplayer.so
#3  0xa904acf5 in ?? () from /usr/lib/mozilla/plugins/libflashplayer.so
#4  0xa8f3718d in ?? () from /usr/lib/mozilla/plugins/libflashplayer.so
#5  0xa8f37816 in ?? () from /usr/lib/mozilla/plugins/libflashplayer.so
#6  0xb6ba4ce7 in start_thread () from /lib/libpthread.so.0
#7  0xb5ead8ce in clone () from /lib/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 3 (Thread 0xa4a5db70 (LWP 1722)):
#0  0xb7781424 in __kernel_vsyscall ()
#1  0xb6ba8d03 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xa8f37059 in ?? () from /usr/lib/mozilla/plugins/libflashplayer.so
#3  0xa8f5f553 in ?? () from /usr/lib/mozilla/plugins/libflashplayer.so
#4  0xa8f3718d in ?? () from /usr/lib/mozilla/plugins/libflashplayer.so
#5  0xa8f37816 in ?? () from /usr/lib/mozilla/plugins/libflashplayer.so
#6  0xb6ba4ce7 in start_thread () from /lib/libpthread.so.0
#7  0xb5ead8ce in clone () from /lib/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 2 (Thread 0x9b3ccb70 (LWP 2619)):
#0  0xb7781424 in __kernel_vsyscall ()
#1  0xb6ba8d03 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb6c203e1 in wait (time=30000, this=0xb5ad6f0) at thread/qwaitcondition_unix.cpp:86
#3  QWaitCondition::wait (this=0x9ec62b4, mutex=0x9ec62b0, time=30000) at thread/qwaitcondition_unix.cpp:160
#4  0xb6c1232c in QThreadPoolThread::run (this=0xb5ad7a0) at concurrent/qthreadpool.cpp:140
#5  0xb6c1ff0b in QThreadPrivate::start (arg=0xb5ad7a0) at thread/qthread_unix.cpp:331
#6  0xb22ad9cd in ?? () from /usr/lib/libGL.so.1
#7  0xb5ead8ce in clone () from /lib/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 1 (Thread 0xb54e9710 (LWP 1656)):
[KCrash Handler]
#7  0xb7781424 in __kernel_vsyscall ()
#8  0xb5e07bbf in raise () from /lib/libc.so.6
#9  0xb5e09565 in abort () from /lib/libc.so.6
#10 0xb5e007a5 in __assert_fail_base () from /lib/libc.so.6
#11 0xb5e00857 in __assert_fail () from /lib/libc.so.6
#12 0xb0454525 in KonqView::changePart (this=0x19dd5878, mimeType=..., serviceName=..., forceAutoEmbed=true) at /home/zuargo/Paquetes/kdebase/src/kde-baseapps-4.7.1/konqueror/src/konqview.cpp:308
#13 0xb049ebbe in KonqMainWindow::openView (this=0x1b7a6038, mimeType=..., _url=..., childView=0x19dd5878, req=...) at /home/zuargo/Paquetes/kdebase/src/kde-baseapps-4.7.1/konqueror/src/konqmainwindow.cpp:946
#14 0xb04a583f in KonqMainWindow::slotCreateNewWindow (this=0x99d5e90, url=..., args=..., browserArgs=..., windowArgs=..., part=0xbff319d0) at /home/zuargo/Paquetes/kdebase/src/kde-baseapps-4.7.1/konqueror/src/konqmainwindow.cpp:1250
#15 0xb04ac247 in KonqMainWindow::qt_metacall (this=0x99d5e90, _c=QMetaObject::InvokeMetaMethod, _id=14, _a=0xbff31548) at /home/zuargo/Paquetes/kdebase/src/build/konqueror/src/konqmainwindow.moc:350
#16 0xb6d33aa4 in metacall (argv=<optimized out>, idx=64, cl=QMetaObject::InvokeMetaMethod, object=0x99d5e90) at kernel/qmetaobject.cpp:237
#17 QMetaObject::metacall (object=0x99d5e90, cl=QMetaObject::InvokeMetaMethod, idx=64, argv=0xbff31548) at kernel/qmetaobject.cpp:232
#18 0xb6d430e0 in QMetaObject::activate (sender=0x18308fb0, m=0xb49764a8, local_signal_index=9, argv=0xbff31548) at kernel/qobject.cpp:3278
#19 0xb494b42f in KParts::BrowserExtension::createNewWindow (this=0x18308fb0, _t1=..., _t2=..., _t3=..., _t4=..., _t5=0xbff319d0) at /home/zuargo/Paquetes/kdelibs/src/build/kparts/browserextension.moc:320
#20 0xb494e1f2 in KParts::BrowserExtension::qt_metacall (this=0x18308fb0, _c=QMetaObject::InvokeMetaMethod, _id=9, _a=0xbff31898) at /home/zuargo/Paquetes/kdelibs/src/build/kparts/browserextension.moc:199
#21 0xada03262 in KHTMLPartBrowserExtension::qt_metacall (this=0x18308fb0, _c=QMetaObject::InvokeMetaMethod, _id=13, _a=0xbff31898) at /home/zuargo/Paquetes/kdelibs/src/build/khtml/khtml_ext.moc:91
#22 0xb6d33aa4 in metacall (argv=<optimized out>, idx=13, cl=QMetaObject::InvokeMetaMethod, object=0x18308fb0) at kernel/qmetaobject.cpp:237
#23 QMetaObject::metacall (object=0x18308fb0, cl=QMetaObject::InvokeMetaMethod, idx=13, argv=0xbff31898) at kernel/qmetaobject.cpp:232
#24 0xb6d430e0 in QMetaObject::activate (sender=0x1ac31ab8, m=0xb49764a8, local_signal_index=9, argv=0xbff31898) at kernel/qobject.cpp:3278
#25 0xb494b42f in KParts::BrowserExtension::createNewWindow (this=0x1ac31ab8, _t1=..., _t2=..., _t3=..., _t4=..., _t5=0xbff319d0) at /home/zuargo/Paquetes/kdelibs/src/build/kparts/browserextension.moc:320
#26 0xadc3966b in KJS::Window::executeOpenWindow (this=0x0, exec=0xbff32090, url=..., frameName=..., features=...) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/khtml/ecma/kjs_window.cpp:1798
#27 0xadc3af00 in KJS::Window::openWindow (this=0xacd50b40, exec=0xbff32090, args=...) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/khtml/ecma/kjs_window.cpp:1686
#28 0xadc3dae6 in KJS::WindowFunc::callAsFunction (this=0x98c50580, exec=0xbff32090, thisObj=0xacd50b40, args=...) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/khtml/ecma/kjs_window.cpp:1943
#29 0xadc40557 in KJS::JSObject::call (this=0x98c50580, exec=0xbff32090, thisObj=0xacd50b40, args=...) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/kjs/object.h:626
#30 0xad7f18c4 in KJS::Machine::runBlock (exec=0xbff32090, codeBlock=..., parentExec=0xbff323f0) at codes.def:1223
#31 0xad7d01b5 in KJS::FunctionImp::callAsFunction (this=0x998477e0, exec=0xbff323f0, thisObj=0xacd50b40, args=...) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/kjs/function.cpp:172
#32 0xadc40557 in KJS::JSObject::call (this=0x998477e0, exec=0xbff323f0, thisObj=0xacd50b40, args=...) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/kjs/object.h:626
#33 0xad7f18c4 in KJS::Machine::runBlock (exec=0xbff323f0, codeBlock=..., parentExec=0x1a79a918) at codes.def:1223
#34 0xad7d01b5 in KJS::FunctionImp::callAsFunction (this=0x996996a0, exec=0x1a79a918, thisObj=0x99846b80, args=...) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/kjs/function.cpp:172
#35 0xadc40557 in KJS::JSObject::call (this=0x996996a0, exec=0x1a79a918, thisObj=0x99846b80, args=...) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/kjs/object.h:626
#36 0xadc613e8 in KJS::JSEventListener::handleEvent (this=0x191f5150, evt=...) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/khtml/ecma/kjs_events.cpp:108
#37 0xada70fe2 in DOM::EventTargetImpl::handleLocalEvents (this=0x1a819fd0, evt=0x1b78f330, useCapture=false) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/khtml/xml/dom2_eventsimpl.cpp:75
#38 0xada4bb2c in DOM::NodeImpl::dispatchGenericEvent (this=0x1a6b19d0, evt=0x1b78f330) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/khtml/xml/dom_nodeimpl.cpp:469
#39 0xada4bd81 in DOM::NodeImpl::dispatchEvent (this=0x1a6b19d0, evt=0x1b78f330, exceptioncode=@0xbff3274c, tempEvent=true) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/khtml/xml/dom_nodeimpl.cpp:401
#40 0xad99f7c6 in KHTMLView::dispatchMouseEvent (this=0x1ac2eab8, eventId=3, targetNode=0x1a6b19d0, targetNodeNonShared=0x1a6b19d0, cancelable=true, detail=1, _mouse=0xbff3284c, setUnder=true, mouseEventType=1, orient=0) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/khtml/khtmlview.cpp:3607
#41 0xad9a05e5 in KHTMLView::mouseReleaseEvent (this=0x1ac2eab8, _mouse=0x15cc0ca0) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/khtml/khtmlview.cpp:1576
#42 0xadb43a8c in khtml::RenderWidget::EventPropagator::sendEvent (this=0x1ac2eab8, e=0x15cc0ca0) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/khtml/rendering/render_replaced.cpp:885
#43 0xadb43b5e in bubblingSend (target=0x1ac2eab8, e=0x15cc0ca0, stoppingParent=0x1ac2eab8) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/khtml/rendering/render_replaced.cpp:922
#44 0xadb443ab in khtml::RenderWidget::handleEvent (this=0x1aab3aa8, ev=...) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/khtml/rendering/render_replaced.cpp:1113
#45 0xadaa84f9 in DOM::HTMLFrameElementImpl::defaultEventHandler (this=0x1aab8538, e=0x1b789478) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/khtml/html/html_baseimpl.cpp:312
#46 0xada4b9dd in DOM::NodeImpl::dispatchGenericEvent (this=0x1aab8540, evt=0x1b789478) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/khtml/xml/dom_nodeimpl.cpp:494
#47 0xada4bd81 in DOM::NodeImpl::dispatchEvent (this=0x1aab8540, evt=0x1b789478, exceptioncode=@0xbff32cac, tempEvent=true) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/khtml/xml/dom_nodeimpl.cpp:401
#48 0xad99f7c6 in KHTMLView::dispatchMouseEvent (this=0x19dd5b90, eventId=5, targetNode=0x1aab8540, targetNodeNonShared=0x1aab8540, cancelable=true, detail=1, _mouse=0xbff33478, setUnder=false, mouseEventType=1, orient=0) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/khtml/khtmlview.cpp:3607
#49 0xad9a047f in KHTMLView::mouseReleaseEvent (this=0x19dd5b90, _mouse=0xbff33478) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/khtml/khtmlview.cpp:1565
#50 0xb61d0a09 in QWidget::event (this=0x19dd5b90, event=0xbff33478) at kernel/qwidget.cpp:8295
#51 0xb6629ac5 in QFrame::event (this=0x19dd5b90, e=0xbff33478) at widgets/qframe.cpp:557
#52 0xad9a42f4 in KHTMLView::widgetEvent (this=0x19dd5b90, e=0xbff33478) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/khtml/khtmlview.cpp:2206
#53 0xad9a4653 in KHTMLView::eventFilter (this=0x19dd5b90, o=0x1a6020a8, e=0xbff33478) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/khtml/khtmlview.cpp:2051
#54 0xb6d2cafc in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=0x98771d0, receiver=0x1a6020a8, event=0xbff33478) at kernel/qcoreapplication.cpp:902
#55 0xb616b587 in notify_helper (e=0xbff33478, receiver=0x1a6020a8, this=0x98771d0) at kernel/qapplication.cpp:4477
#56 QApplicationPrivate::notify_helper (this=0x98771d0, receiver=0x1a6020a8, e=0xbff33478) at kernel/qapplication.cpp:4453
#57 0xb617256e in QApplication::notify (this=0x98771d0, receiver=0x1a6020a8, e=0xbff33478) at kernel/qapplication.cpp:4042
#58 0xb7490b48 in KApplication::notify (this=0xbff33c74, receiver=0x1a6020a8, event=0xbff33478) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/kdeui/kernel/kapplication.cpp:311
#59 0xb6d2c8ce in QCoreApplication::notifyInternal (this=0xbff33c74, receiver=0x1a6020a8, event=0xbff33478) at kernel/qcoreapplication.cpp:787
#60 0xb616cb81 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#61 QApplicationPrivate::sendMouseEvent (receiver=0x1a6020a8, event=0xbff33478, alienWidget=0x0, nativeWidget=0x1a6020a8, buttonDown=0xb6b9ba74, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3141
#62 0xb6203aaf in QETWidget::translateMouseEvent (this=0x1a6020a8, event=0xbff33850) at kernel/qapplication_x11.cpp:4461
#63 0xb620229f in QApplication::x11ProcessEvent (this=0xbff33c74, event=0xbff33850) at kernel/qapplication_x11.cpp:3587
#64 0xb622f7d4 in x11EventSourceDispatch (s=0x9879a10, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#65 0xb5907a1f in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#66 0xb5908198 in g_main_context_iterate.isra.19 () from /usr/lib/libglib-2.0.so.0
#67 0xb59084da in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#68 0xb6d5f6fa in QEventDispatcherGlib::processEvents (this=0x982c468, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#69 0xb622f3ba in QGuiEventDispatcherGlib::processEvents (this=0x982c468, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#70 0xb6d2af7d in QEventLoop::processEvents (this=0xbff33b54, flags=...) at kernel/qeventloop.cpp:149
#71 0xb6d2b1c9 in QEventLoop::exec (this=0xbff33b54, flags=...) at kernel/qeventloop.cpp:201
#72 0xb6d30ead in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#73 0xb6169384 in QApplication::exec () at kernel/qapplication.cpp:3755
#74 0xb04d43b1 in kdemain (argc=4, argv=0x9851ec0) at /home/zuargo/Paquetes/kdebase/src/kde-baseapps-4.7.1/konqueror/src/konqmain.cpp:227
#75 0x0804ec4b in launch (argc=4, _name=0x9859f8c "konqueror", args=<optimized out>, cwd=0x9859fca "/home/zuargo/Documentos", envc=45, envs=<optimized out>, reset_env=true, tty=0x0, avoid_loops=false, startup_id_str=0x985a655 "zuargo-archlinux;1316797839;245084;1625_TIME16589109") at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/kinit/kinit.cpp:734
#76 0x0804fbe6 in handle_launcher_request (sock=<optimized out>, who=<optimized out>) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/kinit/kinit.cpp:1226
#77 0x08050082 in handle_requests (waitForPid=0) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/kinit/kinit.cpp:1410
#78 0x0804b955 in main (argc=) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.1/kinit/kinit.cpp:1907

This bug may be a duplicate of or related to bug 279121.

Possible duplicates by query: bug 279121, bug 231390.

Reported using DrKonqi
Comment 1 Gérard Talbot (no longer involved) 2011-09-25 02:25:50 UTC
> I clicked on the button twitter in this webpage:
> 
> http://www.elciudadano.cl/2011/09/23/codelco-sigue-a-la-deriva/
> 
> (blue button below the main title of the article)

Zuargo,

I clicked the blue button (it's a text link [1], actually) with the "Tweet" text in it which is below the title of article "Codelco sigue a la deriva" and I did not crash. A secondary window popped up asking for my username and password to login into a session at twitter.com.

I am using
KDE Platform Version: 4.7.0
Konqueror version: 4.7.0 (KHTML rendering engine)
Qt Version: 4.7.2
Operating System: Linux 2.6.38-11-generic-pae i686 (32bits)
Distribution: Kubuntu 11.04
here.

zuargo, your kernel version, Qt version and Konqueror application version are all more recent, more updated than mine.

The page 
http://www.elciudadano.cl/2011/09/23/codelco-sigue-a-la-deriva/
never finishes loading (white K throbber on blue square is always active, animated).

Javascript error reports in the page mention
"
Error : http://www.elciudadano.cl/wp-content/w3tc/min/34ecac373a9a8b9cc9bcfa45dcae8614.3606976990.js : ReferenceError: Can't find variable: jQuery
Error : http://www.elciudadano.cl/2011/09/23/41230/codelco-sigue-a-la-deriva/ : ReferenceError: Can't find variable: Shadowbox
Error : http://www.elciudadano.cl/2011/09/23/41230/codelco-sigue-a-la-deriva/ : ReferenceError: Can't find variable: OneBit
Error : https://apis.google.com/js/plusone.js : "Cannot continue until a pending callback completes.
"

[1]: <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="el_ciudadano">Tweet</a>

regards, Gérard
Comment 2 Dawit Alemayehu 2011-11-04 04:47:18 UTC
*** Bug 279121 has been marked as a duplicate of this bug. ***
Comment 3 Dawit Alemayehu 2011-11-15 08:15:40 UTC
*** Bug 282691 has been marked as a duplicate of this bug. ***
Comment 4 Dawit Alemayehu 2011-11-26 17:38:57 UTC
*** Bug 286999 has been marked as a duplicate of this bug. ***
Comment 5 Dawit Alemayehu 2012-01-09 06:33:23 UTC
Git commit 0491f27e085cbbbcc04cfb04a4b62bef6e7a69f4 by Dawit Alemayehu.
Committed on 09/01/2012 at 07:30.
Pushed by adawit into branch 'KDE/4.8'.

Make sure loading is stopped before changing embedded parts.
FIXED-IN: 4.8.1

M  +3    -0    konqueror/src/konqmainwindow.cpp

http://commits.kde.org/kde-baseapps/0491f27e085cbbbcc04cfb04a4b62bef6e7a69f4
Comment 6 Dawit Alemayehu 2012-01-09 06:33:48 UTC
Git commit f43fa7d1c2ae01167a687947456dc8cc254ef1bd by Dawit Alemayehu.
Committed on 09/01/2012 at 07:30.
Pushed by adawit into branch 'master'.

Make sure loading is stopped before changing embedded parts.
FIXED-IN: 4.8.1
(cherry picked from commit 0491f27e085cbbbcc04cfb04a4b62bef6e7a69f4)

M  +3    -0    konqueror/src/konqmainwindow.cpp

http://commits.kde.org/kde-baseapps/f43fa7d1c2ae01167a687947456dc8cc254ef1bd