Make sure loading is stopped before changing embedded parts.

BUG: 282641
FIXED-IN: 4.8.1